--- a/infos.html
+++ b/infos.html
@@ -59,7 +59,7 @@
 <!-- </div> -->
 <div class="relative flex pt-4 justify-center ">
 	<video autoplaypreload="auto" id="idvideo" onclick="fctPlay('idvideo')">
-		<source src="assets\rue_des_nations_infos.mp4" type="video/mp4">
+		<source src="assets\texte_princesse_infos.mp4" type="video/mp4">
 		
 	  Your browser does not support the video tag.
 	  </video> 
